--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-"Hello World" 
+Documentation for Juiry project "auth0 twitter login to aws cognito through ionic app" "dynamodb db with cognito auth" "s3 upload through mobile app with cognito auth" "nodejs twit search" "nodejs lookup db info" "admin approve app" "xui xsplit media integration w\ angular"
